--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
 body {
-    color: #403F37;
+    background-color: #403F37;
     margin: 0;
+    font-size: 36px;
 }
 header {
     background-color: #A6896F;
     width: 100%;
-    height: 50px;
+    height: 100%;
     margin-top: -1%;
     text-align: center;
+    margin-bottom: 0;
+}
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
+}
+button {
+    width: 100%;
+    align-items: center;
+    height: 50px;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.rock {
+    background-color: #73604F;
+}
+.paper {
+    background-color: #F0F0F2;
+}
+.scissors {
+    background-color: #D9C2AD;
 }
